--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <link href="/style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="map"></div>
-    <!-- use a CDN for axios to avoid having to use webpack import for an app this small -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src='map.js'></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCxFhDzpwpOSKeHPOyivmVVlR88f6xA3E&libraries=visualization&callback=initMap"> </script>
-  </body>
+
+<head>
+    <link href="/style.css" rel="stylesheet" />
+</head>
+<body>
+  <div id="map"></div>
+  <script>
+  var map;
+    function initMap() {
+      map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 2,
+        center: new google.maps.LatLng(2.8, -187.3),
+        mapTypeId: 'terrain'
+      });
+
+      // Create a <script> tag and set the USGS URL as the source.
+      var script = document.createElement('script');
+      // This example uses a local copy of the GeoJSON stored at
+      // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
+      script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';
+      document.getElementsByTagName('head')[0].appendChild(script);
+    }
+
+    // Loop through the results array and place a marker for each
+    // set of coordinates.
+    window.eqfeed_callback = function (results) {
+      for (var i = 0; i < results.features.length; i++) {
+        var coords = results.features[i].geometry.coordinates;
+        var latLng = new google.maps.LatLng(coords[1], coords[0]);
+        var marker = new google.maps.Marker({
+          position: latLng,
+          map: map
+        });
+      }
+    }
+  </script>
+
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYEzNRa3FMVxwh9EWXfYR-0rbMjUf-pvg&callback=initMap"
+    type="text/javascript"></script>
+
+</body>
+
 </html>
