--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/style.css" rel="stylesheet" />
     <link rel="manifest" href="/manifest.manifest">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -8,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#5fa8fb">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 <body>
