--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/style.css" rel="stylesheet" />
-    <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -11,6 +11,10 @@
     <meta name="theme-color" content="#5fa8fb">
 </head>
 <body>
+    <noscript>
+        <!-- anchor linking to external file -->
+        <a href="https://www.mozilla.com/">External Link</a>
+    </noscript>
   <div id="map"></div>
   <script src="./bundle.js"> </script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYEzNRa3FMVxwh9EWXfYR-0rbMjUf-pvg&callback=initMap"
@@ -20,7 +24,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
-                .register('/sw.js')
+                .register('sw.js')
                 .then(function () { console.log("Service Worker Registered"); });
         }
     </script>
