--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,20 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#5fa8fb">
+
 </head>
 <body>
     <noscript>
         <!-- anchor linking to external file -->
         <a href="https://www.mozilla.com/">External Link</a>
     </noscript>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   <div id="map"></div>
   <script src="./bundle.js"> </script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYEzNRa3FMVxwh9EWXfYR-0rbMjUf-pvg&callback=initMap"
     type="text/javascript"></script>
+
 
 <!-- ADDS SERVICE WORKER -->
     <script>
