--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- <link rel="manifest" href="manifest.json"> -->
+    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#A5A5A5">
     <link href="/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css"/>
+    <link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/map-location-solid-style/91/Map_-_Location_Solid_Style_06-128.png"
+    type="image/x-icon"/>
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </head>
 
 <body>
     <div id="main"></div>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
     <!-- ADDS SERVICE WORKER -->
     <script>
         if ('serviceWorker' in navigator) {
@@ -21,5 +22,6 @@
         }
     </script>
     <script src="/bundle.js"></script>
+    <noscript>Your browser doesn't support Javascript.</noscript>
 </body>
 </html>
